prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/clone_op_forbiden.diag.txt
ERROR: end of statement expected (; or lf)
testData/diagnostics/clone_op_forbiden.nut.txt:10:16

let ct1 = t.clone()
let ct0 = clone t
                ^


